# end-to-end-rag-application

./: .gitignore  README.md
backend/: RAG_APP.db  main.py  pyproject.toml  requirements.txt  vercel.json
backend/core/: chain.py  embedding.py  file_processing.py  keys.py  llm.py  llm_context.py  vector_store.py
backend/db/: database.py
backend/models/: files.py  repos.py  users.py
backend/routers/: Files.py  chat.py  login.py  repos.py  sign_up.py
backend/schemas/: chat.py  login.py  repos.py  sign_up.py
backend/testing/: test.py
frontend/css/: add_docs.css  ai_chat.css  home.css  index.css  login.css  sign_up.css
frontend/html/: add_docs.html  ai_chat.html  home.html  index.html  login.html  sign_up.html
frontend/js/: add_docs.js  ai_chat.js  home.js  index.js  login.js  sign_up.js
