[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.1.3",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "multipart>=1.3.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
